@@ -1,38 +1,20 @@
 package com.my.blog.website.utils;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+import java.util.Base64;
+import java.util.Random;
 
 import javax.crypto.Cipher;
 import javax.crypto.spec.SecretKeySpec;
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileOutputStream;
-import java.io.IOException;
-import java.nio.channels.FileChannel;
-import java.util.Random;
+
+import org.apache.commons.lang3.StringUtils;
 
 /**
  * 工具类
  * Created by BlueT on 2017/3/9.
+ * @author Hlingeos 2018-3-18 22:35:26 替换Base64的引用包
  */
 public class Tools {
     private static final Random random = new Random();
-
-    public static void copyFileUsingFileChannels(File source, File dest) throws IOException {
-        FileChannel inputChannel = null;
-        FileChannel outputChannel = null;
-        try {
-            inputChannel = new FileInputStream(source).getChannel();
-            outputChannel = new FileOutputStream(dest).getChannel();
-            outputChannel.transferFrom(inputChannel, 0, inputChannel.size());
-        } finally {
-            assert inputChannel != null;
-            inputChannel.close();
-            assert outputChannel != null;
-            outputChannel.close();
-        }
-    }
 
     public static int rand(int min, int max) {
         return random.nextInt(max) % (max - min + 1) + min;
@@ -57,14 +39,14 @@ public class Tools {
         SecretKeySpec secretKeySpec = new SecretKeySpec(key.getBytes("UTF-8"), "AES");
         cipher.init(Cipher.ENCRYPT_MODE, secretKeySpec);
         byte[] encryptedBytes = cipher.doFinal(data.getBytes());
-        return new BASE64Encoder().encode(encryptedBytes);
+        return Base64.getEncoder().encodeToString(encryptedBytes);
     }
 
     public static String deAes(String data, String key) throws Exception {
         Cipher cipher = Cipher.getInstance("AES");
         SecretKeySpec secretKeySpec = new SecretKeySpec(key.getBytes("UTF-8"), "AES");
         cipher.init(Cipher.DECRYPT_MODE, secretKeySpec);
-        byte[] cipherTextBytes = new BASE64Decoder().decodeBuffer(data);
+        byte[] cipherTextBytes = Base64.getDecoder().decode(data);
         byte[] decValue = cipher.doFinal(cipherTextBytes);
         return new String(decValue);
     }
@@ -76,12 +58,6 @@ public class Tools {
      * @return
      */
     public static boolean isNumber(String str) {
-        // Pattern pattern=Pattern.compile("[0-9]*");
-        // return pattern.matcher(str).matches();
-        if (null != str && 0 != str.trim().length() && str.matches("\\d*")) {
-            return true;
-        }
-
-        return false;
+        return StringUtils.isNumeric(str);
     }
 }
